# laguna-chain

./: .dockerignore  .gitignore  Cargo.toml  README.md  contract-upgrade-guide.md  contracts  out.rs  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust-ci.yaml
dummy-runtime/: Cargo.toml
dummy-runtime/src/: lib.rs
dummy_runtime/: Cargo.toml
dummy_runtime/src/: lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  lib.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: mainnet.rs  testnet.rs  util.rs
node/src/rpc/: evm_rpc_compat.rs
node/src/rpc/evm_rpc_compat/: block.rs  block_builder.rs  block_mapper.rs  deferrable_runtime_api.rs  execute.rs  executor.rs  fee.rs  net_api.rs  pending_api.rs  pubsub.rs  transaction.rs
notes/: token_currency.md
pallets/: weights
pallets/call-scheduler/: Cargo.toml
pallets/call-scheduler/src/: lib.rs  mock.rs  temp.rs  tests.rs
pallets/call-scheduler/src/tests/: test_utils.rs
pallets/contract-asset-registry/: Cargo.toml
pallets/contract-asset-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/contract-wrapper/: Cargo.toml
pallets/contract-wrapper/src/: fixed_address.rs  lib.rs  mock.rs  tests.rs
pallets/currencies/: Cargo.toml
pallets/currencies/rpc/: Cargo.toml
pallets/currencies/rpc/runtime-api/: Cargo.toml
pallets/currencies/rpc/runtime-api/src/: lib.rs
pallets/currencies/rpc/src/: lib.rs
pallets/currencies/src/: adapter.rs  adapters.rs  benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/evm-compat/: Cargo.toml
pallets/evm-compat/common/: Cargo.toml
pallets/evm-compat/common/src/: lib.rs
pallets/evm-compat/rpc/: Cargo.toml
pallets/evm-compat/rpc/runtime-api/: Cargo.toml
pallets/evm-compat/rpc/runtime-api/src/: lib.rs
pallets/evm-compat/rpc/src/: lib.rs
pallets/evm-compat/src/: adapter.rs  lib.rs  mapper.rs  mock.rs  self_contained.rs  tests.rs  tx_adapter.rs
pallets/evm-hydro/: Cargo.toml
pallets/fee-enablement/: Cargo.toml
pallets/fee-enablement/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/fee-measurement/: Cargo.toml
pallets/fee-measurement/src/: lib.rs  mock.rs  tests.rs
pallets/fluent-fee/: Cargo.toml
pallets/fluent-fee/src/: benchmarking.rs  lib.rs  mock.rs  signed_extension.rs  tests.rs  weights.rs
pallets/gratitude/: Cargo.toml
pallets/gratitude/src/: lib.rs  mock.rs  tests.rs
pallets/prepaid/: Cargo.toml
pallets/prepaid/src/: lib.rs  mock.rs  tests.rs
pallets/rando/: Cargo.toml
pallets/reverse-evm-call/: Cargo.toml
pallets/reverse-evm-call/src/: lib.rs
pallets/static-fee-source/: Cargo.toml
pallets/system-contract-deployer/: Cargo.toml
pallets/system-contract-deployer/src/: fixed_address.rs  lib.rs  mock.rs  tests.rs
pallets/traits/: Cargo.toml
pallets/traits/src/: currencies.rs  fee.rs  lib.rs
precompiles/: README.md
precompiles/erc20/: Cargo.toml
precompiles/native-asset/: Cargo.toml  (+2 more)
precompiles/rando/: Cargo.toml  IRando.sol  MockRando.sol  PalletRandoPrecompile.sol
precompiles/rando/src/: lib.rs  mock.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/src/: lib.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/src/: data.rs  lib.rs  tests.rs
precompiles/utils/src/data/: xcm.rs
primitives/: Cargo.toml
primitives/src/: currency.rs  lib.rs  time.rs
runtime/: Cargo.toml  build.rs
runtime/benchmarks/: Cargo.toml
runtime/benchmarks/src/: lib.rs  pallet_currencies.rs
runtime/integration-tests/: Cargo.toml
runtime/integration-tests/contracts-data/ink/basic/: Cargo.toml  lib.rs
runtime/integration-tests/contracts-data/ink/dummy_extension_consumer/: Cargo.toml  lib.rs
runtime/integration-tests/contracts-data/ink/native_fungible_token/: Cargo.toml  lib.rs
runtime/integration-tests/contracts-data/ink/scheduler_extension/: Cargo.toml  lib.rs
runtime/integration-tests/contracts-data/ink/system-contracts/set_code/: Cargo.toml  lib.rs
runtime/integration-tests/contracts-data/solidity/amm/: AMM.sol
runtime/integration-tests/contracts-data/solidity/basic/: Basic.sol
runtime/integration-tests/contracts-data/solidity/erc20/: ERC20.sol
runtime/integration-tests/contracts-data/solidity/token/: DemoToken.sol
runtime/integration-tests/contracts-data/solidity/upgradable-contracts/set_code_hash/: demo_v0.sol  demo_v1.sol  set_code.sol
runtime/integration-tests/smart-contract-test/: package-lock.json  package.json
runtime/integration-tests/smart-contract-test/contracts/: Basic.sol  LibPlatform.sol  Multiply.sol  NativeERC20.sol  PlatformConsumer.sol
runtime/integration-tests/src/: basic.rs  contracts.rs  eth_sign.rs  evm_compat.rs  fees.rs  lib.rs  native_token.rs  native_token_precompile.rs
runtime/integration-tests/src/contracts/: chain_extension.rs  consume_native_token.rs  cross_contract.rs  upgradable_contracts.rs
runtime/integration-tests/src/evm_compat/tests/: erc20.rs
runtime/src/: constants.rs  contract_extensions.rs  impl_frame_system.rs  impl_orml_currencies.rs  impl_orml_tokens.rs  impl_pallet_aura.rs  impl_pallet_authorship.rs  impl_pallet_balances.rs  impl_pallet_contract_asset_registry.rs  impl_pallet_contracts.rs  impl_pallet_currencies.rs  impl_pallet_evm.rs  impl_pallet_evm_compat.rs  impl_pallet_fee_enablement.rs  impl_pallet_fee_measurement.rs  impl_pallet_fluent_fee.rs  impl_pallet_granda.rs  impl_pallet_gratitude.rs  impl_pallet_hydro_evm.rs  impl_pallet_prepaid.rs  impl_pallet_proxy.rs  impl_pallet_rando.rs  impl_pallet_scheduler.rs  impl_pallet_sudo.rs  impl_pallet_system_contract_deployer.rs  impl_pallet_timestamp.rs  impl_pallet_transaction_payment.rs  impl_pallet_treasury.rs  impl_reverse_evm_call.rs  lib.rs  precompiles.rs
runtime/src/constants/: block_time.rs  currency.rs
runtime/src/impl_pallet_contracts/: chain_extensions.rs
runtime/src/impl_pallet_evm/: precompiles.rs
runtime/src/weights/: mod.rs  pallet_balances.rs
subxt-tests/: Cargo.toml  metadata.scale
subxt-tests/src/: erc20_fee.rs  lib.rs  main.rs  native_fee.rs
(+8 files in other folders)
