[profile.release]
panic = 'unwind' # reduce binary size

[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = [
  'node',
  'runtime',
  'runtime/integration-tests',
  'primitives',
  'pallets/fluent-fee',
  'pallets/static-fee-source',
  "pallets/traits",
  'pallets/contract-asset-registry',
  'pallets/currencies',
  'pallets/currencies/rpc',
  'pallets/currencies/rpc/runtime-api',
  'pallets/call-scheduler',
  'subxt-tests'
] 
resolver = "2" # use the new resolver for better dependency resolution
