[profile.release]
panic = 'unwind' # reduce binary size

[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = [
  'node',
  'runtime',
  'runtime/integration-tests',
  'primitives',
  'pallets/fluent-fee',
  'pallets/fee-enablement',
  'pallets/fee-measurement',
  "pallets/traits",
  'pallets/contract-asset-registry',
  'pallets/currencies',
  'pallets/prepaid',
  'pallets/currencies/rpc',
  'pallets/currencies/rpc/runtime-api',
  'pallets/evm-compat'
] 
resolver = "2" # use the new resolver for better dependency resolution
