[package]
description = "a generic runtime package for testing the node software"
edition = "2021"
name = "dummy-runtime"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.substrate-wasm-builder]
branch = "hydro-dep-2021-11-1"
git = 'https://github.com/ultrastable-money/substrate.git'
version = '5.0.0-dev'

[dependencies]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
optional = true
version = '4.0.0-dev'

[dependencies.frame-executive]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.frame-support]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.frame-system]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.frame-system-benchmarking]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
optional = true
version = '4.0.0-dev'

[dependencies.frame-system-rpc-runtime-api]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-aura]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.pallet-balances]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.pallet-grandpa]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.pallet-randomness-collective-flip]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.pallet-sudo]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.pallet-timestamp]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-api]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-block-builder]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-consensus-aura]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '0.10.0-dev'

[dependencies.sp-core]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-inherents]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-offchain]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-runtime]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-session]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-std]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-transaction-pool]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-version]
branch = "hydro-dep-2021-11-1"
default-features = false
git = 'https://github.com/ultrastable-money/substrate.git'
version = '4.0.0-dev'

[features]
default = ['std']
runtime-benchmarks = [
  'frame-benchmarking',
  'frame-support/runtime-benchmarks',
  'frame-system-benchmarking',
  'frame-system/runtime-benchmarks',
  'hex-literal',
  'pallet-balances/runtime-benchmarks',
  'pallet-timestamp/runtime-benchmarks',
  'sp-runtime/runtime-benchmarks',
]
std = [
  'codec/std',
  'scale-info/std',
  'frame-executive/std',
  'frame-support/std',
  'frame-system-rpc-runtime-api/std',
  'frame-system/std',
  'pallet-aura/std',
  'pallet-balances/std',
  'pallet-grandpa/std',
  'pallet-randomness-collective-flip/std',
  'pallet-sudo/std',
  'pallet-timestamp/std',
  'pallet-transaction-payment-rpc-runtime-api/std',
  'pallet-transaction-payment/std',
  'sp-api/std',
  'sp-block-builder/std',
  'sp-consensus-aura/std',
  'sp-core/std',
  'sp-inherents/std',
  'sp-offchain/std',
  'sp-runtime/std',
  'sp-session/std',
  'sp-std/std',
  'sp-transaction-pool/std',
  'sp-version/std',
]
