[package]
edition = "2021"
name = "laguna-node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "laguna-node"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
branch = "polkadot-v0.9.27"
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0'

[dependencies]
# laguna chain primitives
primitives = {path = "../primitives"}

# laguna chain runtime
laguna-runtime = {path = "../runtime"}

codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0'}
sc-basic-authorship = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-cli = {features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-client-api = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-consensus = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-consensus-aura = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-executor = {features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-finality-grandpa = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-rpc-api = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-service = {features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-telemetry = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sc-transaction-pool-api = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

# substrate primitives
sp-api = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-block-builder = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-blockchain = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-consensus = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-consensus-aura = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-finality-grandpa = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-inherents = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-keyring = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-timestamp = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

substrate-frame-rpc-system = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

pallet-transaction-payment-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

frame-system = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
frame-support = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
pallet-contracts-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

pallet-transaction-payment = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
pallet-system-contract-deployer = {path = "../pallets/system-contract-deployer"}

# requird for benchmark cli-parsing and conduct runtime-benchmark
frame-benchmarking = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
frame-benchmarking-cli = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}

clap = {version = "3.1.6", features = ["derive"]}
hex-literal = "0.3.4"
jsonrpsee = {version = "0.14.0", features = ["server"]}
pallet-currencies-rpc = {version = "0.1.0", path = "../pallets/currencies/rpc"}
pallet-evm-compat-rpc = {version = "0.1.0", path = "../pallets/evm-compat/rpc"}
pallet-evm-compat = {version = "0.1.0", path = "../pallets/evm-compat"}

fc-rpc-core = {git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v0.9.27" }
fp-ethereum = {git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v0.9.27" }
fp-rpc = {git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v0.9.27" }
fc-rpc = {git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v0.9.27" }
pallet-contracts-primitives = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27" }
ethereum = { version = "0.12.0", features = ["with-codec"] }
rlp = "0.5"


sc-network = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27" }
hex = "0.4.3"
ethereum-types = "0.13.1"
futures = "0.3.24"

[features]
default = []
runtime-benchmarks = ["laguna-runtime/runtime-benchmarks"]
