[package]
edition = "2021"
name = "primitives"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { default-features = false, features = ['derive'], package = "parity-scale-codec", version = "3.1.5" }
scale-info = { default-features = false, features = ['derive'], version = "2.1.2" }
serde = { version = "1.0.137", optional = true }
sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}

[features]
default = ["std"]
std = [
  "serde",
  "sp-std/std",
  "sp-runtime/std",
  "sp-core/std",
]
